[CXF-4695] Applying patch
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1421721 13f79535-47bb-0310-9956-ffa450edef68